--- a/app/views/admin/worldwide_organisations_translations/edit.html.erb
+++ b/app/views/admin/worldwide_organisations_translations/edit.html.erb
@@ -5,26 +5,26 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_for @translated_worldwide_organisation, url: admin_worldwide_organisation_translation_path(@translated_worldwide_organisation, translation_locale), method: :put do |form| %>
-      <%= render "govuk_publishing_components/components/input", {
-        label: {
-          text: "Name (required)"
+      <%= render "components/translated_input", {
+        input: {
+          label: {
+            text: "Name (required)"
+          },
+          name: "worldwide_organisation[name]",
+          id: "worldwide_organisation_name",
+          value: @translated_worldwide_organisation.name,
+          heading_level: 2,
+          heading_size: "l",
+          error_items: errors_for(form.object.errors, :name),
+          right_to_left: @translated_worldwide_organisation.translation_locale.rtl?,
+          right_to_left_help: false,
         },
-        name: "worldwide_organisation[name]",
-        id: "worldwide_organisation_name",
-        value: @translated_worldwide_organisation.name,
-        heading_level: 2,
-        heading_size: "l",
-        error_items: errors_for(form.object.errors, :name),
-        right_to_left: @translated_worldwide_organisation.translation_locale.rtl?,
-        right_to_left_help: false
+        details: {
+          text: @english_worldwide_organisation.name,
+        }
       } %>
 
-      <div class="govuk-!-margin-bottom-8">
-        <h2 class="app-view-translation__english-content govuk-heading-m govuk-!-margin-bottom-2">English:</h2>
-        <p class="app-view-translation__english-content govuk-body"><%= @english_worldwide_organisation.name %></p>
-      </div>
-
-      <div class="govuk-button-group">
+      <div class="govuk-button-group govuk-!-margin-top-8">
         <%= render "govuk_publishing_components/components/button", {
           text: "Save",
           data_attributes: {
