Update street address to use translated_input component
The edit page uses the input component not textarea. The edit
translation page should use the same components.

--- a/app/views/admin/worldwide_office_translations/edit.html.erb
+++ b/app/views/admin/worldwide_office_translations/edit.html.erb
@@ -62,8 +62,8 @@
         }
       } %>
 
-      <%= render "components/translated_textarea", {
-        textarea: {
+      <%= render "components/translated_input", {
+        input: {
           label: {
             text: "Street address",
             heading_size: "l",
