--- a/app/views/admin/statistics_announcement_tags/edit.html.erb
+++ b/app/views/admin/statistics_announcement_tags/edit.html.erb
@@ -23,7 +23,7 @@
 
       <div class="govuk-button-group govuk-!-margin-top-7">
         <%= render "govuk_publishing_components/components/button", {
-          text: "Update tags",
+          text: "Save",
           data_attributes: {
             module: 'gem-track-click',
             track_category: 'form-button',
