Remove redundant cancel and redirect pathing logic
Now you can only arrive on the specialist topics edit page from the
document summary page, we no longer need this logic around redirecting
to multiple places.

--- a/app/views/admin/edition_legacy_associations/edit.html.erb
+++ b/app/views/admin/edition_legacy_associations/edit.html.erb
@@ -20,7 +20,7 @@
           }
         } %>
 
-        <%= link_to("Cancel", @path, class: "govuk-link govuk-link--no-visited-state") %>
+        <%= link_to("Cancel", admin_edition_path(@edition), class: "govuk-link govuk-link--no-visited-state") %>
       </div>
     <% end %>
   </section>
