Added some styling changes to fix behaviours
- Changed fixed width for View/Delete to whitespace no wrap
- Changed Heading row to flex display and had to change the width to full width otherwise it was messing with the alignment of the right most element

--- a/app/assets/stylesheets/admin/views/_document-collection-group-memberships-index.scss
+++ b/app/assets/stylesheets/admin/views/_document-collection-group-memberships-index.scss
@@ -1,9 +1,12 @@
-.app-view-document-collection-group-memberships-index__table {
-  .govuk-table__cell {
-    word-break: break-word;
+.app-view-document-collection-group-memberships-index__heading {
+  display: flex;
+  justify-content: space-between;
+}
 
-    &:last-child {
-      width: 7em;
-    }
+.app-view-document-collection-group-memberships-index__table .govuk-table__cell{
+  word-break: break-word;
+
+  &:last-child {
+    white-space: nowrap;
   }
 }
