--- a/app/views/admin/document_collection_group_memberships/index.html.erb
+++ b/app/views/admin/document_collection_group_memberships/index.html.erb
@@ -20,14 +20,12 @@
     } %>
 
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-three-quarters">
+      <div class="govuk-grid-column-full app-view-document-collection-group-memberships-index__heading">
         <%= render "govuk_publishing_components/components/heading", {
           text: "Documents",
           margin_bottom: 6,
         } %>
-      </div>
 
-      <div class="govuk-grid-column-one-quarter">
         <p class="govuk-body govuk-!-text-align-right">
           <%= link_to "Add document", "#", class: "govuk-link" %>
         </p>
