--- a/app/views/admin/editions/_scheduled_publication_fields.html.erb
+++ b/app/views/admin/editions/_scheduled_publication_fields.html.erb
@@ -19,7 +19,7 @@
       {
         label: "Schedule for publication",
         value: 1,
-        checked: params[:scheduled_publication_active] || edition.scheduled_publication.present?,
+        checked: params[:scheduled_publication_active] == "1" || edition.scheduled_publication.present?,
         conditional: render("components/datetime_fields_with_govuk_date_component", {
               field_name: "scheduled_publication",
               prefix: "edition",
