--- a/app/views/admin/editions/_review_reminder_fields.html.erb
+++ b/app/views/admin/editions/_review_reminder_fields.html.erb
@@ -17,26 +17,33 @@
               track_label: "Set a reminder to review this content after it has been published",
               track_action: "clicked",
             },
-            conditional: render("components/datetime_fields", {
+            conditional: render("components/datetime_fields_with_govuk_date_component", {
               field_name: "review_at",
               prefix: "edition[document_attributes][review_reminder_attributes]",
               date_only: true,
               error_items: errors_for(review_reminder.errors, :review_at),
               date_heading: "Date",
-              date_hint: "For example, 01 August 2025",
+              date_hint: "For example, 01 08 2025",
               year: {
-                value: review_reminder.review_at&.year,
+                value: params.dig("edition", "document_attributes", "review_reminder_attributes", "review_at(1i)") || review_reminder.review_at&.year,
                 id: "edition_document_review_reminder_review_at_1i",
-                start_year: Time.zone.now.year,
-                end_year: Time.zone.now.year + 10,
+                name: "edition[document_attributes[review_reminder_attributes[review_at(1i)]]]",
+                label: "Year",
+                width: 4,
               },
               month: {
-                value: review_reminder.review_at&.month,
+                value: params.dig("edition", "document_attributes", "review_reminder_attributes", "review_at(2i)") || review_reminder.review_at&.month,
                 id: "edition_document_review_reminder_review_at_2i",
+                name: "edition[document_attributes[review_reminder_attributes[review_at(2i)]]]",
+                label: "Month",
+                width: 2,
               },
               day: {
-                value: review_reminder.review_at&.day,
+                value: params.dig("edition", "document_attributes", "review_reminder_attributes", "review_at(3i)") || review_reminder.review_at&.day,
                 id: "edition_document_review_reminder_review_at",
+                name: "edition[document_attributes[review_reminder_attributes[review_at(3i)]]]",
+                label: "Day",
+                width: 2,
               },
             }) +
             render("govuk_publishing_components/components/input", {
