--- a/app/views/admin/editions/show/_main.html.erb
+++ b/app/views/admin/editions/show/_main.html.erb
@@ -29,85 +29,7 @@
 
   <%= render partial: 'admin/editions/show/main_notices', locals: { edition: @edition } %>
 
-  <section class="app-view-summary__section">
-    <% if !@edition.publicly_visible? && @edition.versioning_completed? %>
-      <%= render "govuk_publishing_components/components/heading", {
-        text: "Preview",
-        heading_level: 2,
-        font_size: "l",
-        margin_bottom: 3,
-      } %>
-      <p class="govuk-body">
-        <%= link_to("Preview on website #{"- English" if @edition.translatable? && @edition.available_in_multiple_languages?} (opens in new tab)".strip,
-        @edition.public_url(draft: true, locale: @edition.primary_locale),
-        class: "govuk-link",
-        target: "_blank",
-        data: {
-          module: "gem-track-click",
-          "track-category": "button-clicked",
-          "track-action": "#{@edition.model_name.singular.dasherize}-button",
-          "track-label": "Preview on website",
-        }) if @edition.available_in_english? || @edition.non_english_edition? %>
-      </p>
-      <% if @edition.translatable? && @edition.available_in_multiple_languages? %>
-        <%= render "govuk_publishing_components/components/details", {
-          title: "Preview translated pages"
-        } do %>
-          <%= render "govuk_publishing_components/components/list", {
-            items: @edition.non_english_translated_locales.map do |locale|
-              (link_to("Preview on website - #{locale.native_and_english_language_name}",
-                      @edition.public_url(locale: locale.code, draft: true),
-                      class: 'govuk-link',
-                      target: '_blank',
-                      data: {
-                        module: "gem-track-click",
-                        "track-category": "button-clicked",
-                        "track-action": "#{@edition.model_name.singular.dasherize}-button",
-                        "track-label": "Preview on website - #{locale.native_and_english_language_name}",
-                      }) + "")
-            end
-          } %>
-        <% end %>
-      <% end %>
-
-      <% if @edition.has_enabled_shareable_preview? %>
-        <%= render "govuk_publishing_components/components/details", {
-          title: "Share document preview"
-        } do %>
-          <p class="govuk-body">Send this preview link to someone so they can see the content and how the document will appear on GOV.UK.</p>
-          <p class="govuk-body">No password is needed and anyone with the preview link can view it. You're responsible for who you share draft documents with. </p>
-          <p class="govuk-body">The preview link will expire on <%= Date.today.next_month.strftime('%-d %B %Y') %> or when the document is published.</p>
-
-          <%= render "govuk_publishing_components/components/copy_to_clipboard", {
-            label: "Copy and send this link to someone and they’ll be able to preview your draft on GOV.UK.",
-            copyable_content: show_url_with_auth_bypass_options(@edition, draft: true, locale: @edition.primary_locale),
-            button_text: "Copy link"
-          } %>
-          <% if !@edition.publicly_visible? %>
-            <p class="govuk-body govuk-!-margin-top-7">Reset and generate a new preview link if you've shared the preview with the wrong person or if the link has expired. This will disable the previous preview link.</p>
-            <%= form_with(url: update_bypass_id_admin_edition_path(@edition), method: :patch) do |f| %>
-              <input type="hidden" name="_method" value="patch" />
-              <%= render "govuk_publishing_components/components/button", {
-                text: "Generate new link",
-                secondary_quiet: true
-              } %>
-            <% end %>
-          <% end %>
-        <% end %>
-      <% end %>
-    <% elsif !@edition.publicly_visible? && !@edition.versioning_completed? %>
-      <%= render "govuk_publishing_components/components/heading", {
-        text: "Preview",
-        heading_level: 2,
-        font_size: "l",
-        margin_bottom: 3,
-      } %>
-
-      <%= render "govuk_publishing_components/components/inset_text", {
-        text: "To see the changes and share a document preview link, add a change note or mark the change type to minor."
-      } %>
-    <% end %>
-  </section>
+  <%= render Admin::Editions::Show::PreviewComponent.new(edition: @edition) %>
 
   <% if @edition.change_note_required? %>
     <section class="app-view-summary__section">
