Restyled translation input and textarea components
Moved the original english translation closer to the input field so the users understand the two components belong together.

Unfortunately, the non-govspeak translation textarea contains a margin-bottom: 30px !important, which means in order to override this margin, we also need to introduce an important into our css override.

Additionally, we require to select first child's direct top level govuk-form-group, since govspeak editor has multiple nested govuk-form-groups

--- a/app/assets/stylesheets/admin/_overrides.scss
+++ b/app/assets/stylesheets/admin/_overrides.scss
@@ -25,3 +25,10 @@ code {
     display: block;
   }
 }
+
+.app-c-translated-textarea,
+.app-c-translated-input {
+  & > *:first-child > .govuk-form-group {
+    margin-bottom: govuk-spacing(2) !important; // stylelint-disable-line declaration-no-important
+  }
+}
